--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: firstpk
 Type: Package
 Title: my first packages
 Version: 1.0.0
-Authors@R: person('Liam','Wickham',email = '15527504293@163.com',role = c('aut','cre))
+Authors: person('Liam','Wickham',email = '15527504293@163.com',role = c('aut','cre))
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: this is my first packages
 License: MIT
